--- a/src/com/xiaomitool/v2/gui/fxml/SettingsFrame.fxml
+++ b/src/com/xiaomitool/v2/gui/fxml/SettingsFrame.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.web.*?>
 
-<StackPane prefHeight="540.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane fx:id="WHOLE" prefHeight="540.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="540.0" prefWidth="547.0">
          <children>
@@ -50,7 +50,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="450.0">
                      <children>
-                        <VBox layoutY="-5.0" prefWidth="450.0">
+                        <VBox alignment="TOP_CENTER" layoutY="-5.0" prefHeight="500.0" prefWidth="450.0">
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="20.0" top="10.0" />
                            </padding>
@@ -129,6 +129,29 @@
                                           <Font size="14.0" />
                                        </font>
                                     </Button>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="60.0" prefWidth="420.0">
+                                 <children>
+                                    <Button fx:id="BUTTON_FEEDBACK" minWidth="290.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="290.0" text="Send feedback">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Button>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="48.0" prefWidth="420.0" spacing="5.0">
+                                 <children>
+                                    <Text fx:id="INSTANCE_ID" strokeType="OUTSIDE" strokeWidth="0.0" text="Instance id: ">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </Text>
+                                    <TextField fx:id="INSTANCE_VALUE" alignment="CENTER" editable="false" prefHeight="31.0" prefWidth="100.0">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                    </TextField>
                                  </children>
                               </HBox>
                            </children>
